--- a/pages/tools/zsh.textile
+++ b/pages/tools/zsh.textile
@@ -24,4 +24,8 @@ $ brew install zsh
 <pre>
 $ curl -L https://github.com/robbyrussell/oh-my-zsh/raw/master/tools/install.sh | sh
 </pre>
+    <h4><small>2.2</small> 插件</h4>
+<pre>
+plugins=(svn git brew github bower)
+</pre>
 </section>
