--- a/_posts/2013-04-12-hhkb.textile
+++ b/_posts/2013-04-12-hhkb.textile
@@ -13,6 +13,7 @@ tags: [hhkb]
     <p>最近萌购的日元汇率降了，所以现在买会更便宜一些，不过现在日本亚马逊已经没货了。</p>
     <p>日本原装进口，质量无得弹，手感不错，声音很好听。</p>
     <p>键盘加手续费1281元，再加点运费也才1300不到，比某宝上1600便宜多了。不过我多买了一个专用的包，心想这么贵的键盘怎么也要给它一个好一点的包吧，没想到现在键盘的包比我背的还要贵，现在的生活水平真的是越来越“高”了，不过程序员也不容易，工作辛苦，平时想买啥就买啥，总之自己开心最重要。</p>
+    <p>现在有一个问题，就是现在macbook外接了键盘发现触摸板摸不到了，这不是要逼我买Apple Magic Mouse。。。算了，暂时拿个普通鼠标用着先吧，等有钱了再买个Apple Magic Mouse。</p>
     <p><img class="thumbnail" src="http://ww1.sinaimg.cn/large/a74eed94jw1e3n5snjouqj.jpg" alt=""></p>
     <p><img class="thumbnail" src="http://ww4.sinaimg.cn/large/a74e55b4jw1e3n5t5e6ukj.jpg" alt=""></p>
     <p><img class="thumbnail" src="http://ww1.sinaimg.cn/large/bfadf3bejw1e3n5tf008bj.jpg" alt=""></p>
