--- a/_posts/2013-04-04-raspberry-pi.textile
+++ b/_posts/2013-04-04-raspberry-pi.textile
@@ -76,6 +76,20 @@ $ sudo ifup wlan0
 $ iwconfig
 </pre>
 
+    <h4><small></small> 配置ssh自动登录</h4>
+<pre>
+$ brew install ssh-copy-id
+$ ssh-copy-id pi@192.168.1.103
+</pre>
+<pre>
+pi@192.168.1.103's password:
+Now try logging into the machine, with "ssh 'pi@192.168.1.103'", and check in:
+
+  ~/.ssh/authorized_keys
+
+to make sure we haven't added extra keys that you weren't expecting.
+</pre>
+
     <h4><small>1.3</small> 配置vncserver</h4>
     <p>参考：http://elinux.org/RPi_VNC_Server</p>
     <p>刚好手上有一Nexus 7平板，可以通过Android连接vnc</p>
@@ -118,6 +132,24 @@ export PATH=$PATH:$GOROOT/bin:$GOPATH/bin
 $ sudo apt-get install zsh
 $ curl -L https://github.com/robbyrussell/oh-my-zsh/raw/master/tools/install.sh | sh
 $ chsh -s /bin/zsh
+</pre>
+
+    <h4><small>1.7</small> 安装nodejs</h4>
+<pre class="prettyprint">
+$ axel -n 10 http://nodejs.org/dist/v0.10.4/node-v0.10.4.tar.gz
+$ tar -zxvf node-v0.10.4.tar.gz
+$ cd node-v0.10.4
+$ ./configure
+$ make
+$ sudo make install
+$ node --version
+$ npm version
+</pre>
+
+    <h4><small></small> 挂载树莓派的某个文件夹到本地</h4>
+    <p>安装osxfuse和sshfs: "http://osxfuse.github.io/":http://osxfuse.github.io/</p>
+<pre>
+$ sshfs pi@192.168.1.103:/var/www www
 </pre>
 </section>
 
