--- a/_posts/2013-04-26-Arduino-And-Button.textile
+++ b/_posts/2013-04-26-Arduino-And-Button.textile
@@ -10,7 +10,7 @@ tags: [Arduino]
     <p>通过按钮输入信息去控制LED灯</p>
     <p>线路图</p>
     <p><img src="http://ww1.sinaimg.cn/large/a74ecc4cjw1e43e5x304gj212w0iutdt.jpg" width="700" alt=""></p>
-    <p>用到的电子原件</p>
+    <p>用到的材料</p>
     <ol>
         <li>10K欧电阻1个</li>
         <li>220欧电阻1个</li>
