--- a/_posts/2013-05-21-xcode-error-failed-to-attach-to-process-ID-0.textile
+++ b/_posts/2013-05-21-xcode-error-failed-to-attach-to-process-ID-0.textile
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: error: failed to attach to process ID 0
+title: error failed to attach to process ID 0
 description: xcode问题解决
 categories: [archive]
 tags: [ios]
