--- a/_posts/2014-03-10-raspberry-pi-nas.textile
+++ b/_posts/2014-03-10-raspberry-pi-nas.textile
@@ -9,5 +9,30 @@ tags: [raspberrypi, nas]
 <section>
 <pre>
 # sudo apt-get install samba samba-common-bin
+$ sudo smbpasswd -a pi
+$ sudo mkdir /home/shares
+$ sudo mkdir /home/shares/public
+$ sudo chown -R root:users /home/shares/public
+$ sudo chmod -R ug=rwx,o=rx /home/shares/public
+$ sudo vim /etc/samba/smb.conf
+</pre>
+<pre>
+[public]
+  comment = Public Storage
+  path = /home/shares/public
+  valid users = @users
+  force group = users
+  create mask = 0660
+  directory mask = 0771
+  read only = no
+</pre>
+<pre>
+$ sudo vim /etc/fstab
+</pre>
+<pre>
+/dev/sdxx /home/shares/public/disk1 auto gid=pi,uid=pi,noatime 0 0
+</pre>
+<pre>
+$ sudo reboot
 </pre>
 </section>
